# krishnaik-simple-rag-langchain

./: .gitignore  01_Introduction_and_Fundamentals.ipynb  02_Document_Loaders.ipynb  03_Text_Splitting_Strategies.ipynb  04_Embeddings_and_Vector_Representations.ipynb  05_Vector_Stores.ipynb  06_Retrieval_Strategies.ipynb  07_Complete_RAG_Pipeline.ipynb  08_External_Index_Retrievers.ipynb  README.md  Vector_Stores_Tutorial.ipynb  pyproject.toml  simple_rag_langchain.ipynb
